# q2sra

./: LICENSE.txt  README.md  pyproject.toml  setup.py
q2sra/: dada2.py  deblur.py  demux.py  filter_fastq.py  manifest.py  merge_metadata.py  merge_repseqs.py  merge_tables.py  prefetch.py  proj.py  write_metadata.py
q2sra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: 1test_filter.py  1test_manifest_demux.py  1test_prefetch.py  test_dada2.py  test_deblur.py  test_filter.py  test_manifest_demux.py  test_merge.py  test_prefetch.py  test_run.py
tests/sample_proj/: pierce  wei
tests/sample_proj/bai/: bai-rep-seqs.qza  bai-table.qza
tests/sample_proj/budd/: budd-repseqs.qza  budd-table.qza
tests/sample_proj/campbell/: campbell-repseqs.qza  campbell-table.qza
tests/sample_proj/danckert/: danckert-rep-seqs.qza  danckert-table.qza
tests/sample_proj/escalas/: escalas-rep-seqs.qza  escalas-table.qza
tests/sample_proj/gobet/: gobet-rep-seqs.qza  gobet-table.qza
tests/sample_proj/herder/: herder-repseqs.qza  herder-table.qza
tests/sample_proj/jiang/: jiang-repseqs.qza  jiang-table.qza
tests/sample_proj/jones/: jones-repseqs.qza  jones-table.qza
tests/sample_proj/kesnerova/: kesnerova-repseqs.qza  kesnerova-table.qza
tests/sample_proj/maltseva/: maltseva-repseqs.qza  maltseva-table.qza
tests/sample_proj/montoya/: montoya-repseqs.qza  montoya-table.qza
tests/sample_proj/na-zhang/: na-zhang-rep-seqs.qza  na-zhang-table.qza
tests/sample_proj/new-pierce/: new-pierce-table.qza
tests/sample_proj/new-wei/: new-wei-table.qza
(+20 files in other folders)
